FusionDev Backup1/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Order</fullName>
        <description>Customer Order (only one Stage-Closed Won)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Processing</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Processing</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inside Sales%2FField Sales</fullName>
        <description>Inside Sales/Field Sales (to include Oppt Stages)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved Prebook</fullName>
        </values>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Pending Prebook</fullName>
        </values>
        <values>
            <fullName>Processing</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Quote Created</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sample Order</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Sample Order Created</fullName>
        </values>
        <values>
            <fullName>Sample Order Requested</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Order_Ready__c</fullName>
        <formula>Account.Order_Ready__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Order Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_on_Hold__c</fullName>
        <formula>Account.MarketingHold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account on Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <formula>Account.BillingStreet + BR()+
Account.BillingCity &amp; &quot; , &quot; &amp; Account.BillingState &amp; &quot; , &quot; &amp; Account.BillingPostalCode + BR()+
Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consignee</fullName>
                </value>
                <value>
                    <fullName>Fedex Collect</fullName>
                </value>
                <value>
                    <fullName>Fedex Prepaid</fullName>
                </value>
                <value>
                    <fullName>Fedex Recipient</fullName>
                </value>
                <value>
                    <fullName>Shipper</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>UPS Consignee</fullName>
                </value>
                <value>
                    <fullName>UPS Cost And Freight</fullName>
                </value>
                <value>
                    <fullName>UPS Delivery Duty Paid</fullName>
                </value>
                <value>
                    <fullName>UPS Freight Collect</fullName>
                </value>
                <value>
                    <fullName>UPS Free On Board</fullName>
                </value>
                <value>
                    <fullName>UPS Prepaid</fullName>
                </value>
                <value>
                    <fullName>UPS Shipping Duty And Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chase_Profile_Id__c</fullName>
        <label>Chase Profile Id</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_In_Current_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed In Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Opportunity_Products__c</fullName>
        <description>Rollup summary count of all opportunity products associated with opportunity</description>
        <inlineHelpText>Rollup summary count of all opportunity products associated with opportunity</inlineHelpText>
        <label>Count Opportunity Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Card_CSC_Id__c</fullName>
        <label>Credit Card CSC Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <formula>TEXT(Account.Credit_Card_Expiration_Month__c) &amp; &quot; / &quot; &amp;  TEXT(Account.Credit_Card_Expiration_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Card Expiration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Month__c</fullName>
        <label>Credit Card Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Year__c</fullName>
        <label>Credit Card Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Name__c</fullName>
        <label>Credit Card Name</label>
        <length>54</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VISA</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>AMEX</fullName>
                </value>
                <value>
                    <fullName>DISC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Card</label>
        <referenceTo>Credit_Card__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENSX_EDM__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENSX_EDM__Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FOB</label>
        <referenceTo>DTX_FOB__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMD__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>LMD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadConversionRT__c</fullName>
        <label>LeadConversionRT</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Status__c</fullName>
        <label>Location Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_By_Date__c</fullName>
        <label>Header Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Abandoned_Cart_Creation_Date__c</fullName>
        <label>Abandoned Cart Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Abandoned_Cart_Last_Modified_Date__c</fullName>
        <label>Abandoned Cart Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Commerce Cloud ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Is_Abandoned_Cart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Abandoned Cart?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Is_Removed_Products_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Removed Products List?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Recovered_Order_No__c</fullName>
        <label>Recovered Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Is_Wishlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wishlist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Order_Registration_Status__c</fullName>
        <label>Order Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Unregistered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSF_DWback__Order_Site__c</fullName>
        <label>Commerce Cloud Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Recovered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recovered Abandoned Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Phone__c</fullName>
        <label>Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Synced_by_Unify_Commerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced by Unify Commerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Wishlist_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Public Wishlist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__isCurrentAbandonedCart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Latest Abandoned Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTSAddress1__c</fullName>
        <label>OTS Address1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSAddress2__c</fullName>
        <label>OTS Address2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSAddress3__c</fullName>
        <label>OTS Address3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSCity__c</fullName>
        <label>OTS City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSContact__c</fullName>
        <label>OTS Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSCountry__c</fullName>
        <label>OTS Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSFaxNum__c</fullName>
        <label>OTS Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OTSName__c</fullName>
        <label>OTS Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSPhoneNum__c</fullName>
        <label>OTS Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OTSResaleId__c</fullName>
        <label>OTS ResaleId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSState__c</fullName>
        <label>OTS State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSZip__c</fullName>
        <label>OTS Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityAssignmentOwnerId__c</fullName>
        <label>OpportunityAssignmentOwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Placed__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Order Placed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Ready__c</fullName>
        <formula>Account.Order_Ready__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <defaultValue>&quot;Salesforce&quot;</defaultValue>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Order__c</fullName>
        <formula>IF(RecordType.Name = &apos;Sample Order&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_To_ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_To_ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_By_Date__c</fullName>
        <formula>Need_By_Date__c</formula>
        <label>Ship By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates the order to ship all product together.</description>
        <inlineHelpText>Designates the order to ship all product together.</inlineHelpText>
        <label>Ship Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Ship_To__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Ship To Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Account.ParentId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Ship To)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>IF(Ship_To__c=&apos;&apos;, Account.ShippingStreet + BR() + Account.ShippingCity + &apos;, &apos; + Account.ShippingState + &apos;, &apos; + Account.ShippingPostalCode + BR() + Account.ShippingCountry, Ship_To__r.ShippingStreet + BR() + Ship_To__r.ShippingCity + &apos;, &apos; + Ship_To__r.ShippingState + &apos;, &apos; + Ship_To__r.ShippingPostalCode + BR() + Ship_To__r.ShippingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address__c</fullName>
        <label>Sold To Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UseOTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use OTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YETI_Oppty_to_Acct_Ownership_Check__c</fullName>
        <description>To Identify if Account Owner matches Opportunity Owner values</description>
        <formula>Account.OwnerId  =  OwnerId</formula>
        <label>YETI-Oppty to Acct Ownership Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__OrderNumber__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Order_Placed__c</columns>
        <columns>Need_By_Date__c</columns>
        <columns>Send_To_ERP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities_processing</fullName>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Send_To_ERP__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Order_Placed__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Need_By_Date__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Approved Prebook</value>
        </filters>
        <label>All Opportunities - Processing</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Future_Orders</fullName>
        <columns>Need_By_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>Ship_To__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pending Prebook</value>
        </filters>
        <label>Future Orders</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Sales_Order__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Sales_Order__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_in_Queue</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Sales_Order__c</columns>
        <columns>Ship_To__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Need_By_Date__c</columns>
        <columns>PO_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Order__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/20/2016 12:00 AM</value>
        </filters>
        <label>Opportunity in Queue</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Sales_Order__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
</CustomObject>